# ai-obsidian

./: .dockerignore  .gitignore  README.md  ai-obsidian  pyproject.toml
.github/workflows/: docker-image.yml  release.yml  test.yml
config/: models.json
docker/: Dockerfile  compose.yaml
docs/: development.md  docker.md  models.md  vault-soul.md
macos/installer/Sources/: AIObsidianInstaller.swift
scripts/: AI Obsidian Installer.command  build-macos-installer.sh  docker-bootstrap.sh  docker-install.sh  install.sh  start-docker-runtime.sh
src/ai_obsidian/: __init__.py  chat.py  chat_providers.py  cli.py  docker_runtime.py  installer.py  model_catalog.py  obsidian_plugin.py  omlx.py  prerequisites.py  soul.py  vault.py  voice.py
src/ai_obsidian/resources/: __init__.py
src/ai_obsidian/resources/obsidian_companion/: main.js  manifest.json  styles.css
tests/: test_docker_runtime.py  test_external_chat_providers.py  test_guided_model_selection.py  test_health_repair.py  test_init_safety.py  test_install_safety.py  test_interactive_cli.py  test_model_catalog.py  test_models_list.py  test_models_status.py  test_omlx_client.py  test_plugin_integration.py  test_prerequisites.py  test_release_installer.py  test_setup_api.py  test_soul.py  test_stack_flow.py  test_vault_safety.py  test_voice.py
tests/fixtures/: setup-profile.json
